--- a/.github/workflows/auto_cont.yml
+++ b/.github/workflows/auto_cont.yml
@@ -39,6 +39,10 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --index-url https://download.pytorch.org/whl/cpu `
             "torch==2.4.1+cpu" "torchvision==0.19.1+cpu" "torchaudio==2.4.1+cpu"
+            
+      - name: Install scikit-learn for worker
+        shell: powershell
+        run: python -m pip install "scikit-learn>=1.3,<1.6"
 
       - name: Ensure PyInstaller
         shell: powershell
