--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,58 +1,76 @@
-name: Build AMIGOpy installer
+name: Build AMIGOpy (GUI + CPU worker) — unsigned
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build-and-sign-windows:
+  build-amigopy:
     runs-on: windows-latest
+    env:
+      KMP_DUPLICATE_LIB_OK: "TRUE"
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Miniconda
+      - name: Setup Miniconda (builder env)
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniconda-version: "latest"
           python-version: "3.11"
-          environment-file: amigo.yml
+          environment-file: amigo.yml     # your heavy env
           activate-environment: amigo
+          auto-update-conda: true
+          channels: conda-forge,defaults
 
-      - name: Run PyInstaller
+      - name: Add Graphviz to PATH (conda)
+        shell: powershell
+        run: echo "$env:CONDA_PREFIX\Library\bin" >> $env:GITHUB_PATH
+
+      - name: Upgrade pip tooling
+        shell: powershell
+        run: python -m pip install --upgrade pip wheel setuptools
+
+      # ---- Pin Torch CPU (no CUDA wheels) ----
+      - name: Install PyTorch CPU wheels
         shell: powershell
         run: |
-          pyinstaller Launch_ImGUI.spec
+          python -m pip install --upgrade pip
+          python -m pip install --index-url https://download.pytorch.org/whl/cpu `
+            "torch==2.4.1+cpu" "torchvision==0.19.1+cpu" "torchaudio==2.4.1+cpu"
+            
+      - name: Install scikit-learn for worker
+        shell: powershell
+        run: python -m pip install "scikit-learn>=1.3,<1.6"
+
+      - name: Ensure PyInstaller
+        shell: powershell
+        run: pip install pyinstaller
+
+      - name: Build combined dist (GUI + CPU worker)
+        shell: powershell
+        run: pyinstaller amigopy.spec --clean
+
+      - name: Verify dist contents
+        shell: powershell
+        run: |
+          if (-not (Test-Path "dist\AMIGOpy\Launch_ImGUI.exe")) { throw "Launch_ImGUI.exe missing" }
+          if (-not (Test-Path "dist\AMIGOpy\segmentator_worker.exe")) { throw "segmentator_worker.exe missing" }
+          Get-ChildItem -Recurse dist\AMIGOpy | Select-Object -First 40 | Format-List -Property FullName,Length
 
       - name: Install Inno Setup
+        shell: powershell
         run: choco install innosetup -y
 
-      - name: Build Windows installer
-        run: '& "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" compile.iss'
+      - name: Build AMIGOpy installer
+        shell: powershell
+        run: '& "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe" AMIGOpy.iss'
 
-      - name: Upload unsigned installer artifact
-        id: upload_unsigned
+      - name: Upload installer (unsigned)
         uses: actions/upload-artifact@v4
         with:
-          name: unsigned-installer
-          path: Output/mysetup.exe
-
-      - name: Sign Windows installer with SignPath
-        uses: signpath/github-action-submit-signing-request@v1.1
-        with:
-          api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
-          organization-id: ${{ secrets.SIGNPATH_ORGANIZATION_ID }}
-          project-slug: ${{ secrets.SIGNPATH_PROJECT_SLUG }}
-          signing-policy-slug: ${{ secrets.SIGNPATH_SIGNING_POLICY_SLUG }}
-          github-artifact-id: ${{ steps.upload_unsigned.outputs.artifact-id }}
-          wait-for-completion: true
-          output-artifact-directory: signed
-
-      - name: Upload signed installer
-        uses: actions/upload-artifact@v4
-        with:
-          name: signed-installer
-          path: signed/
+          name: AMIGOpy-Installer-unsigned
+          path: Output/AMIGOpy-Setup.exe
+          if-no-files-found: error
+          overwrite: true
